--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Blood service of Life Link",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./dist/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
-    "nodemon": "^3.1.4",
-    "typescript": "^5.5.3"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "@types/morgan": "^1.9.9",
+    "typescript": "^5.5.4"
   }
 }
