--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
     "typescript": "^5.5.4"
   }
 }
