--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/muhammedjavadksd/Blood-service#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.621.0",
+    "@aws-sdk/credential-provider-env": "^3.620.1",
+    "@aws-sdk/s3-request-presigner": "^3.621.0",
     "@types/express": "^4.17.21",
+    "aws-sdk": "^2.1665.0",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
