--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/credential-provider-env": "^3.620.1",
     "@aws-sdk/s3-request-presigner": "^3.621.0",
     "@types/express": "^4.17.21",
+    "amqplib": "^0.10.4",
     "aws-sdk": "^2.1665.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
@@ -33,6 +34,7 @@
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
