--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ mongodb_url=mongodb://localhost:27017/blood_service
 JWT_SECRET=JWT_SECRET
 AWS_ACCESS_KEY_ID= test
 AWS_SECRET_ACCESS_KEY= test
- 
+BLOOD_REQUEST_NOTIFICATION=BLOOD_REQUEST_NOTIFICATION
