sending api to profile for chat

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ JWT_SECRET=JWT_SECRET
 AWS_ACCESS_KEY_ID= test
 AWS_SECRET_ACCESS_KEY= test
 BLOOD_REQUEST_NOTIFICATION=BLOOD_REQUEST_NOTIFICATION
+PROFILE_END_POINT=http://localhost:7001/api/profile
