blood donation request updation

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ AWS_ACCESS_KEY_ID= test
 AWS_SECRET_ACCESS_KEY= test
 BLOOD_REQUEST_NOTIFICATION=BLOOD_REQUEST_NOTIFICATION
 PROFILE_END_POINT=http://localhost:7001/api/profile
+PROFILE_CHAT_UPDATE=PROFILE_CHAT_UPDATE 
