admin get all matched donors

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ PROFILE_CHAT_UPDATE=PROFILE_CHAT_UPDATE
 BLOOD_BUCKET=lifelink-blood-bank
 AWS_ACCESS_KEY_ID=AKIAQ3EGQRVNJSD64I47
 AWS_SECRET_ACCESS_KEY=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
+RABBITMQ_URL=amqp://localhost
