--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -31,6 +31,6 @@ jobs:
           key: ${{ secrets.AWS_PRIVATE_KEY }}
           script: |
               sudo docker system prune -af --volumes
-              sudo docker-compose -f /var/www/docker-compose.yaml pull javadjazz123/lifelink_blood
+              sudo docker-compose -f /var/www/docker-compose.yaml pull blood
               sudo docker-compose -f /var/www/docker-compose.yaml up -d --remove-orphans
 
