--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=7007
-mongodb_url=mongodb://localhost:27017/blood_service
+mongodb_url=mongodb://127.0.0.1:27017blood_service
 JWT_SECRET=JWT_SECRET
 AWS_ACCESS_KEY_ID= test
 AWS_SECRET_ACCESS_KEY= test
