--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "amqplib": "^0.10.4",
     "aws-sdk": "^2.1665.0",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
